[gd_scene load_steps=5 format=3 uid="uid://bygyet7o3xlep"]

[ext_resource type="PackedScene" uid="uid://gtkju2me12td" path="res://base_components/node_spawner/node_spawner.tscn" id="1_xsfhi"]
[ext_resource type="Script" path="res://composite_components/player_spawner/player_spawner.gd" id="1_xwf0y"]
[ext_resource type="PackedScene" uid="uid://2cs02ipd30sh" path="res://content/entities/ship/ship.tscn" id="3_d3r6j"]
[ext_resource type="PackedScene" uid="uid://bc7sg8jrkvds8" path="res://content/entities/player/player.tscn" id="3_uh64t"]

[node name="PlayerSpawner" type="Marker2D"]
script = ExtResource("1_xwf0y")

[node name="PlayerNodeSpawner" parent="." instance=ExtResource("1_xsfhi")]
scene = ExtResource("3_uh64t")
add_to = 1

[node name="ShipNodeSpawner" parent="." instance=ExtResource("1_xsfhi")]
scene = ExtResource("3_d3r6j")
add_to = 1
